Add button load from gallery to qrcode activity

--- a/app/src/main/res/layout/content_decoder.xml
+++ b/app/src/main/res/layout/content_decoder.xml
@@ -11,21 +11,39 @@
       android:id="@+id/qrdecoderview"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_alignParentLeft="true"
+      android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       />
 
-  <CheckBox
+  <LinearLayout
+      android:id="@+id/bottomBar"
       android:background="#99000000"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:text="On/Off flashlight"
       android:layout_alignParentBottom="true"
-      android:textSize="14sp"
-      android:padding="16dp"
-      android:textColor="#ffffff"
-      android:id="@+id/flashlight_checkbox"
-      android:checked="false"
-      />
+      android:orientation="horizontal">
+
+    <CheckBox
+        android:id="@+id/flashlight_checkbox"
+        style="@style/BottomBarButton"
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:layout_height="match_parent"
+        android:text="@string/ttl_on_off_flashlight"
+        android:textColor="#ffffff"
+        android:textSize="14sp"
+        android:checked="false" />
+
+    <Button
+        android:id="@+id/buttonGallery"
+        style="@style/BottomBarButton"
+        android:layout_width="0dp"
+        android:layout_weight="2"
+        android:drawableTop="@drawable/ic_picture"
+        android:text="@string/ttl_open_gallery"
+        android:textColor="#ffffff"
+        android:textSize="14sp" />
+
+  </LinearLayout>
 
 </RelativeLayout>
