--- a/app/src/main/res/layout/content_decoder.xml
+++ b/app/src/main/res/layout/content_decoder.xml
@@ -10,7 +10,8 @@
   <SurfaceView
       android:id="@+id/qrdecoderview"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
+      android:layout_above="@id/bottomBar"
       android:layout_alignParentStart="true"
       android:layout_alignParentTop="true"
       />
